--- a/Projects/MMI/Lumericalfiles/MMILumapi.ipynb
+++ b/Projects/MMI/Lumericalfiles/MMILumapi.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_8161/1430973055.py:2: DeprecationWarning: the imp module is deprecated in favour of importlib; see the module's documentation for alternative uses\n",
+      "  import imp\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import imp\n",
@@ -36,11 +45,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "mmi = lumapi.MODE(filename='MMIProject.lms',hide=False) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inter = lumapi.INTERCONNECT()"
    ]
   },
   {
@@ -245,8 +263,7 @@
     "    for i in range(InP):\n",
     "        mmi.addmesh()\n",
     "        mmi.set({\"x\":-2e-6-TLen/4, \"x span\":4e-6 + TLen/2,\n",
-    "                \"y span\":TWidth,\n",
-    "                 \"z\":0, \"z span\":1e-6})\n",
+    "                \"y span\":TWidth, \"z\":0, \"z span\":1e-6})\n",
     "        InY = mmi.getnamed(\"MMI EnterPort \"+ str(i+1),\"y\")\n",
     "        mmi.set(\"y\",InY)\n",
     "        mmi.set(\"name\",\"input_mesh \" + str(i+1))\n",
@@ -260,8 +277,7 @@
     "    for i in range(OutP):\n",
     "        mmi.addmesh()\n",
     "        mmi.set({\"x\":BdX_Span + 2e-6+TLen/4, \"x span\":4e-6 + TLen/2,\n",
-    "                 \"y span\":TWidth,\n",
-    "                 \"z\":0, \"z span\":1e-6})\n",
+    "                 \"y span\":TWidth, \"z\":0, \"z span\":1e-6})\n",
     "        OutY = mmi.getnamed(\"MMI OutPort \"+ str(i+1),\"y\")\n",
     "        mmi.set(\"y\",OutY)\n",
     "        mmi.set(\"name\",\"output_mesh \" + str(i+1))\n",
@@ -1025,11 +1041,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "0f7288f5bbc8ddabadb55512c6ea40631ee26a15da14324bc6de909c1bf76211"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.2 ('teee')",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1043,9 +1056,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.8.10"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
