--- a/Projects/MMI/Lumericalfiles/MMILumapi.ipynb
+++ b/Projects/MMI/Lumericalfiles/MMILumapi.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_8161/1430973055.py:2: DeprecationWarning: the imp module is deprecated in favour of importlib; see the module's documentation for alternative uses\n",
+      "/tmp/ipykernel_10402/1430973055.py:2: DeprecationWarning: the imp module is deprecated in favour of importlib; see the module's documentation for alternative uses\n",
       "  import imp\n"
      ]
     }
@@ -44,6 +44,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lumapi init"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -59,6 +66,15 @@
    "outputs": [],
    "source": [
     "inter = lumapi.INTERCONNECT()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = mmi.gdsopen('KlayoutFiles/MMIGDS.gds')"
    ]
   },
   {
@@ -286,6 +302,53 @@
     "        else:\n",
     "            mmi.set({\"set mesh multiplier\":1, \"x mesh multiplier\":MeshMultiplier[1][0], \n",
     "                    \"y mesh multiplier\":MeshMultiplier[1][1], \"z mesh multiplier\":MeshMultiplier[1][2]})\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GDS Assembly (MMI 1x2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GDSxsp = 5.68706e-6    # Tapper x span\n",
+    "GDSysp = 2.44444e-6    # Tapper y span\n",
+    "\n",
+    "Tlwid = 1.1e-6         # Tapper left width\n",
+    "Trwid = 0.45e-6        # Tapper right width\n",
+    "Tlen = 4e-6            # Tapper length\n",
+    "Tsp = 0.651852e-6      # Tapper pair spacement\n",
+    "\n",
+    "Plen = 4e-6            # Ports length               \n",
+    "\n",
+    "layer = 1\n",
+    "\n",
+    "# Cell init and body setup ------------------------------\n",
+    "mmi.gdsbegincell(f,'MMI')\n",
+    "mmi.gdsaddrect(f,layer,0,0,GDSxsp,GDSysp) \n",
+    "\n",
+    "# Input tappers -----------------------------------------\n",
+    "mmi.gdsaddpoly(f,layer,np.array([[-GDSxsp/2,Tlwid/2],[-(Tlen + GDSxsp/2),Trwid/2],[-(Tlen + GDSxsp/2),-Trwid/2],[-GDSxsp/2,-Tlwid/2]]))\n",
+    "\n",
+    "# Output tappers ----------------------------------------\n",
+    "mmi.gdsaddpoly(f,layer,np.array([[GDSxsp/2, Tsp + Tlwid/2],[GDSxsp/2, Tsp - Tlwid/2],[(Tlen + GDSxsp/2), Tsp - Trwid/2],[(Tlen + GDSxsp/2), Tsp + Trwid/2]]))\n",
+    "mmi.gdsaddpoly(f,layer,np.array([[GDSxsp/2, -Tsp + Tlwid/2],[GDSxsp/2, -Tsp - Tlwid/2],[(Tlen + GDSxsp/2), -Tsp - Trwid/2],[(Tlen + GDSxsp/2), -Tsp + Trwid/2]]))\n",
+    "\n",
+    "# Input ports  ------------------------------------------\n",
+    "mmi.gdsaddrect(f,layer,-(Tlen+GDSxsp/2)-Plen/2,0,Plen,Trwid) \n",
+    "\n",
+    "# Output ports  ------------------------------------------\n",
+    "mmi.gdsaddrect(f,layer,(Tlen+GDSxsp/2)+Plen/2, Tsp,Plen,Trwid) \n",
+    "mmi.gdsaddrect(f,layer,(Tlen+GDSxsp/2)+Plen/2, -Tsp,Plen,Trwid) \n",
+    "\n",
+    "mmi.gdsendcell(f)\n",
+    "mmi.gdsclose(f)"
    ]
   },
   {
