--- a/Projects/MMI/Lumericalfiles/MMILumapi.ipynb
+++ b/Projects/MMI/Lumericalfiles/MMILumapi.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_3957/1430973055.py:2: DeprecationWarning: the imp module is deprecated in favour of importlib; see the module's documentation for alternative uses\n",
-      "  import imp\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import imp\n",
@@ -52,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,11 +61,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = mmi.gdsopen('KlayoutFiles/MMIGDS.gds')"
+    "f = mmi.gdsopen('KlayoutFiles/MMITemplate.gds')"
    ]
   },
   {
@@ -317,13 +308,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GDSxsp = 5.68706e-6    # Tapper x span\n",
-    "GDSysp = 2.44444e-6    # Tapper y span\n",
+    "GDSxsp = 5.69e-6    # Tapper x span\n",
+    "GDSysp = 2.4e-6    # Tapper y span\n",
     "\n",
     "Tlwid = 1.1e-6         # Tapper left width\n",
     "Trwid = 0.45e-6        # Tapper right width\n",
     "Tlen = 4e-6            # Tapper length\n",
-    "Tsp = 0.651852e-6      # Tapper pair spacement\n",
+    "Tsp = 0.65e-6      # Tapper pair spacement\n",
     "\n",
     "Plen = 4e-6            # Ports length               \n",
     "\n",
