--- a/Projects/Microring resonator/FirstAnalysis.ipynb
+++ b/Projects/Microring resonator/FirstAnalysis.ipynb
@@ -21,7 +21,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.10.2 ('teee')",
    "language": "python",
    "name": "python3"
   },
@@ -35,12 +35,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "0f7288f5bbc8ddabadb55512c6ea40631ee26a15da14324bc6de909c1bf76211"
    }
   }
  },
