--- a/Projects/Microring resonator/LumericalFiles/RingAssembly.ipynb
+++ b/Projects/Microring resonator/LumericalFiles/RingAssembly.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,18 +19,18 @@
     "###############################################################\n",
     "# LINUX PATH\n",
     "\n",
-    "# sys.path.append(\"/opt/lumerical/v221/api/python\") #Default linux lumapi path\n",
-    "# import lumapi\n",
-    "# sys.path.append(os.path.dirname('/home/trainner/Documentos/Caio/GitReps/Photonics-training/Projects/Microring Resonator/LumericalFiles')) #Current directory\n",
+    "sys.path.append(\"/opt/lumerical/v221/api/python\") #Default linux lumapi path\n",
+    "import lumapi\n",
+    "sys.path.append(os.path.dirname('/home/trainner/Documentos/Caio/GitReps/Photonics-training/Projects/Microring Resonator/LumericalFiles')) #Current directory\n",
     "\n",
     "###############################################################\n",
     "# WINDOWS PATH\n",
     "\n",
-    "spec_win = importlib.util.spec_from_file_location('lumapi', 'C:\\\\Program Files\\\\Lumerical\\\\v202\\\\api\\\\python\\\\lumapi.py')\n",
-    "lumapi = importlib.util.module_from_spec(spec_win)\n",
-    "os.add_dll_directory(\"C:/Program Files/Lumerical/v202/api/python\")\n",
-    "sys.path.append(os.path.dirname('C:/Users/Caio/Documents/GitHub/Photonics-training/Projects/MMI/Lumericalfiles/'))\n",
-    "spec_win.loader.exec_module(lumapi)"
+    "#spec_win = importlib.util.spec_from_file_location('lumapi', 'C:\\\\Program Files\\\\Lumerical\\\\v202\\\\api\\\\python\\\\lumapi.py')\n",
+    "#lumapi = importlib.util.module_from_spec(spec_win)\n",
+    "#os.add_dll_directory(\"C:/Program Files/Lumerical/v202/api/python\")\n",
+    "#sys.path.append(os.path.dirname('C:/Users/Caio/Documents/GitHub/Photonics-training/Projects/MMI/Lumericalfiles/'))\n",
+    "#spec_win.loader.exec_module(lumapi)"
    ]
   },
   {
@@ -42,11 +42,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ring = lumapi.MODE(filename='RINGProject.lms',hide=False) "
+    "ring = lumapi.FDTD(filename='RINGProject.fsp',hide=False) "
    ]
   },
   {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,15 +81,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "StRingLen = 1e-6 # Length of straight sections of the ring\n",
-    "Radius = 4e-6 # Ring radius\n",
+    "Radius = 3e-6 # Ring radius\n",
     "\n",
     "StraightSpan = 20e-6 # Length of straight waveguides\n",
-    "Gap = 0.3e-6 # Gap between waveguides and the ring"
+    "Gap = 150e-9 # Gap between waveguides and the ring\n",
+    "\n",
+    "BaseHeight = 0.22e-6 # height of the waveguide\n",
+    "BaseWidth = 0.5e-6 # width of the waveguide base"
    ]
   },
   {
@@ -101,23 +104,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "ring.selectall()\n",
     "ring.delete()\n",
     "ring.addobject(\"ring_resonator\")\n",
-    "ring.set({\"Lc\":StRingLen,\n",
+    "ring.set({\"x\":-StraightSpan/2, \"y\":0, \"z\":0,\n",
+    "          \"Lc\":StRingLen,\n",
     "          \"x span\":StraightSpan,\n",
     "          \"radius\":Radius,\n",
-    "          \"gap\":Gap})"
+    "          \"gap\":Gap,\n",
+    "          \"base height\":BaseHeight,\n",
+    "          \"base width\":BaseWidth})\n",
+    "\n",
+    "ring.setnamed(\"ring resonator::inner_bottom\",\"enabled\",0)\n",
+    "ring.setnamed(\"ring resonator::outer_bottom\",\"enabled\",0)\n",
+    "ring.setnamed(\"ring resonator::arc2\",\"enabled\",0)\n",
+    "ring.setnamed(\"ring resonator::arc3\",\"enabled\",0)\n",
+    "\n",
+    "ring.addfdtd()\n",
+    "ring.set({\"x\":0, \"y\":Radius, \"z\":0,\n",
+    "          \"x span\":StraightSpan, \"y span\":2*Radius})\n",
+    "ring.addport()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.2 64-bit",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -131,12 +147,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9cbdc75d9e2f55d2d9002e3a3bcb34fdd032c5e2f75dfba8f134282fc3e89518"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
