--- a/Projects/Microring resonator/LumericalFiles/RingAssembly.ipynb
+++ b/Projects/Microring resonator/LumericalFiles/RingAssembly.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_3753/675327174.py:2: DeprecationWarning: the imp module is deprecated in favour of importlib; see the module's documentation for alternative uses\n",
-      "  import imp\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import imp\n",
@@ -29,18 +20,18 @@
     "###############################################################\n",
     "# LINUX PATH\n",
     "\n",
-    "sys.path.append(\"/opt/lumerical/v221/api/python\") #Default linux lumapi path\n",
-    "import lumapi\n",
-    "sys.path.append(os.path.dirname('/home/trainner/Documentos/Caio/GitReps/Photonics-training/Projects/Microring resonator/LumericalFiles')) #Current directory\n",
+    "# sys.path.append(\"/opt/lumerical/v221/api/python\") #Default linux lumapi path\n",
+    "# import lumapi\n",
+    "# sys.path.append(os.path.dirname('/home/trainner/Documentos/Caio/GitReps/Photonics-training/Projects/Microring resonator/LumericalFiles')) #Current directory\n",
     "\n",
     "###############################################################\n",
     "# WINDOWS PATH\n",
     "\n",
-    "#spec_win = importlib.util.spec_from_file_location('lumapi', 'C:\\\\Program Files\\\\Lumerical\\\\v202\\\\api\\\\python\\\\lumapi.py')\n",
-    "#lumapi = importlib.util.module_from_spec(spec_win)\n",
-    "#os.add_dll_directory(\"C:/Program Files/Lumerical/v202/api/python\")\n",
-    "#sys.path.append(os.path.dirname('C:/Users/Caio/Documents/GitHub/Photonics-training/Projects/Microring resonator/LumericalFiles/'))\n",
-    "#spec_win.loader.exec_module(lumapi)"
+    "spec_win = importlib.util.spec_from_file_location('lumapi', 'C:\\\\Program Files\\\\Lumerical\\\\v202\\\\api\\\\python\\\\lumapi.py')\n",
+    "lumapi = importlib.util.module_from_spec(spec_win)\n",
+    "os.add_dll_directory(\"C:/Program Files/Lumerical/v202/api/python\")\n",
+    "sys.path.append(os.path.dirname('C:/Users/Caio/Documents/GitHub/Photonics-training/Projects/Microring resonator/LumericalFiles/'))\n",
+    "spec_win.loader.exec_module(lumapi)"
    ]
   },
   {
@@ -52,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +575,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.10.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -598,12 +589,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "9cbdc75d9e2f55d2d9002e3a3bcb34fdd032c5e2f75dfba8f134282fc3e89518"
    }
   }
  },
