Microring resonator update 10
gds results extracted

--- a/Projects/MMI/Lumericalfiles/MMILumapi.ipynb
+++ b/Projects/MMI/Lumericalfiles/MMILumapi.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_13239/1430973055.py:2: DeprecationWarning: the imp module is deprecated in favour of importlib; see the module's documentation for alternative uses\n",
+      "/tmp/ipykernel_26230/1430973055.py:2: DeprecationWarning: the imp module is deprecated in favour of importlib; see the module's documentation for alternative uses\n",
       "  import imp\n"
      ]
     }
@@ -828,9 +828,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../SavedData/TapperWidth/Data2\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1013,7 +1020,7 @@
        "[2 rows x 32 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1029,6 +1036,8 @@
     "    infile = open(os.path.join(loadPath, 'Data'+str(i+1)) , 'rb')\n",
     "    data['Load'+str(i+1)] = plk.load(infile)\n",
     "    infile.close()\n",
+    "\n",
+    "print(os.path.join(loadPath, 'Data'+str(1+1)))\n",
     "    \n",
     "#print(data)\n",
     "dataFrame = pd.DataFrame(data)\n",
