--- a/Projects/Microring resonator/FirstAnalysis.ipynb
+++ b/Projects/Microring resonator/FirstAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,6 @@
    "source": [
     "from calendar import c\n",
     "\n",
-    "\n",
     "Tp = (r2**2 * a**2 - 2*r1*r2*a*np.cos(phi) + r1**2)/(1 - 2*r1*r2*a*np.cos(phi) + (a*r1*r2)**2)\n",
     "Td = ((1-r1**2)*(1-r2**2)*a)/(1 - 2*r1*r2*a*np.cos(phi) + (r1*r2*a)**2)\n",
     "dbTp = 10*np.log(Tp)\n",
@@ -441,13 +440,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle L = 23.7113~um$"
+       "$\\displaystyle L = 30.5890~um$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -459,7 +458,7 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle r^{2} = 0.9010$"
+       "$\\displaystyle r^{2} = 0.9001$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -471,7 +470,7 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle k^{2} = 0.0990$"
+       "$\\displaystyle k^{2} = 0.0999$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -482,9 +481,9 @@
     }
    ],
    "source": [
-    "fsr = 25e-9\n",
-    "fwhm = 0.83e-9\n",
-    "ng = 4.05292\n",
+    "fsr = 18.5e-9\n",
+    "fwhm = 0.62e-9\n",
+    "ng = 4.24548\n",
     "neff = 2.4456\n",
     "a = 1\n",
     "lmbdC = 1550e-9\n",
@@ -502,7 +501,7 @@
     "r1 = r**(1/2)\n",
     "r2 = r**(1/2)\n",
     "\n",
-    "display(Math('L = %5.4f~um' %(L*10**6)))\n",
+    "display(Math('L = %5.4f~um' %(Len*10**6)))\n",
     "display(Math('r^{2} = %5.4f' %(r)))\n",
     "display(Math('k^{2} = %5.4f' %(k)))"
    ]
@@ -542,7 +541,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.10.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -556,12 +555,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "9cbdc75d9e2f55d2d9002e3a3bcb34fdd032c5e2f75dfba8f134282fc3e89518"
    }
   }
  },
