--- a/Projects/Bragg Grating/SimulationFiles/MODE_Analysis.ipynb
+++ b/Projects/Bragg Grating/SimulationFiles/MODE_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,23 +25,23 @@
     "###############################################################\n",
     "# LINUX PATH\n",
     "\n",
-    "# sys.path.append(\"/opt/lumerical/v221/api/python\") #Default linux lumapi path\n",
-    "# import lumapi\n",
-    "# sys.path.append(os.path.dirname('/home/trainner/Documentos/Caio/GitReps/Photonics-training/Projects/Bragg Grating/SimulationFiles')) #Current directory\n",
+    "sys.path.append(\"/opt/lumerical/v221/api/python\") #Default linux lumapi path\n",
+    "import lumapi\n",
+    "sys.path.append(os.path.dirname('/home/trainner/Documentos/Caio/GitReps/Photonics-training/Projects/Bragg Grating/SimulationFiles')) #Current directory\n",
     "\n",
     "###############################################################\n",
     "# WINDOWS PATH\n",
     "\n",
-    "spec_win = importlib.util.spec_from_file_location('lumapi', 'C:\\\\Program Files\\\\Lumerical\\\\v202\\\\api\\\\python\\\\lumapi.py')\n",
-    "lumapi = importlib.util.module_from_spec(spec_win)\n",
-    "os.add_dll_directory(\"C:/Program Files/Lumerical/v202/api/python\")\n",
-    "sys.path.append(os.path.dirname('C:/Users/Caio/Documents/GitHub/Photonics-training/Projects/Bragg Grating/SimulationFiles/'))\n",
-    "spec_win.loader.exec_module(lumapi)"
+    "# spec_win = importlib.util.spec_from_file_location('lumapi', 'C:\\\\Program Files\\\\Lumerical\\\\v202\\\\api\\\\python\\\\lumapi.py')\n",
+    "# lumapi = importlib.util.module_from_spec(spec_win)\n",
+    "# os.add_dll_directory(\"C:/Program Files/Lumerical/v202/api/python\")\n",
+    "# sys.path.append(os.path.dirname('C:/Users/Caio/Documents/GitHub/Photonics-training/Projects/Bragg Grating/SimulationFiles/'))\n",
+    "# spec_win.loader.exec_module(lumapi)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,24 +100,89 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Assembly"
+    "## Assembly parameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
+    "SilH = 450e-9 # Silicon height\n",
+    "SilW = 220e-9 # Silicon width\n",
+    "\n",
+    "GlassH = 1e-6 # SiO2 height"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Index variation calculation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deltaW = 50e-9  # Teeth heigth\n",
+    "\n",
     "bragg.switchtolayout()\n",
     "bragg.deleteall()\n",
-    "RectInsert(0, 500e-6, 0, 450e-9, 0, 200e-9, \"Si (Silicon) - Palik\", bragg)"
+    "\n",
+    "# Substract insert\n",
+    "RectInsert(0, 5e-6, 0, GlassH*2, -(SilW+GlassH)/2, GlassH, \"SiO2 (Glass) - Palik\", bragg)\n",
+    "bragg.set(\"name\", \"Substract\")\n",
+    "\n",
+    "bragg.addfde()\n",
+    "bragg.setanalysis(\"wavelength\", 1500e-9)\n",
+    "bragg.setanalysis(\"number of trial modes\",4)\n",
+    "bragg.set(\"solver type\", \"2D X normal\")\n",
+    "bragg.set({\"x\":0, \"y\":0, \"z\":0, \"y span\":1e-6, \"z span\":1e-6,\n",
+    "           \"mesh cells y\":200, \"mesh cells z\":200,\n",
+    "           \"y min bc\":\"PML\", \"y max bc\":\"PML\", \"z min bc\":\"PML\", \"z max bc\":\"PML\"})\n",
+    "\n",
+    "neff = [[0],[0]]\n",
+    "\n",
+    "# Waveguide insert\n",
+    "RectInsert(0, 5e-6, 0, SilH, 0, SilW, \"Si (Silicon) - Palik\", bragg)\n",
+    "bragg.set(\"name\", \"Waveguide\")\n",
+    "bragg.findmodes()\n",
+    "\n",
+    "neff[0] = bragg.getdata(\"FDE::data::mode1\",\"neff\")\n",
+    "\n",
+    "# Waveguide insert\n",
+    "RectInsert(0, 5e-6, 0, SilH + deltaW, 0, SilW, \"Si (Silicon) - Palik\", bragg)\n",
+    "bragg.set(\"name\", \"Waveguide\")\n",
+    "bragg.findmodes()\n",
+    "\n",
+    "neff[1] = bragg.getdata(\"FDE::data::mode1\",\"neff\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([[2.34562172+8.76612764e-05j]]), array([[2.44863018+3.91589524e-05j]])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(neff)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.2 64-bit",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -131,12 +196,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9cbdc75d9e2f55d2d9002e3a3bcb34fdd032c5e2f75dfba8f134282fc3e89518"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
