Bragg Fiber Grating - Update 4.3

--- a/Projects/Bragg Grating/SimulationFiles/GratingAssembly.ipynb
+++ b/Projects/Bragg Grating/SimulationFiles/GratingAssembly.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,11 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bragg = lumapi.FDTD(filename='BRAGGProject.lsf',hide=False) "
+    "bragg = lumapi.MODE(filename='BRAGGProjectEME.lms',hide=False) "
    ]
   },
   {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Assembly"
+    "## Assembly parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SilH = 450e-9 # Silicon height\n",
+    "SilW = 220e-9 # Silicon width\n",
+    "\n",
+    "GlassH = 1e-6 # SiO2 height\n",
+    "\n",
+    "ExtH = 475e-9 # Extremities height\n",
+    "\n",
+    "Vp = 1e-6      # Grating Period\n",
+    "Vh = 50e-9     # Grating height\n",
+    "VpNum = 50     # Number of periods"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Assembly main model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bragg.switchtolayout()\n",
+    "bragg.deleteall()\n",
+    "\n",
+    "# Substract insert\n",
+    "RectInsert(3*Vp, 6*Vp + 4e-6, 0, GlassH*2, -(SilW+GlassH)/2, GlassH, \"SiO2 (Glass) - Palik\", bragg)\n",
+    "bragg.set(\"name\", \"Substract\")\n",
+    "\n",
+    "# Waveguide insert\n",
+    "RectInsert(3*Vp, 6*Vp, 0, SilH, 0, SilW, \"Si (Silicon) - Palik\", bragg)\n",
+    "bragg.set(\"name\", \"Waveguide\")\n",
+    "\n",
+    "# Extremities insert\n",
+    "RectInsert(-1e-6, 2e-6, 0, ExtH, 0, SilW, \"Si (Silicon) - Palik\", bragg)\n",
+    "bragg.set(\"name\", \"W1\")\n",
+    "RectInsert(7*Vp, 2e-6, 0, ExtH, 0, SilW, \"Si (Silicon) - Palik\", bragg)\n",
+    "bragg.set(\"name\", \"W2\")\n",
+    "\n",
+    "# Corrugation insert\n",
+    "for i in range(3):\n",
+    "    RectInsert(Vp/2 + 2*Vp*i, Vp, 0, ExtH+2*Vh, 0, SilW, \"Si (Silicon) - Palik\", bragg)\n",
+    "    bragg.set(\"name\", \"Teeth \" + str(i+1))\n",
+    "\n",
+    "# EME setting\n",
+    "bragg.addeme()\n",
+    "\n",
+    "bragg.set({\"y\":0, \"y span\":ExtH+2*Vh, \"z\":0, \"z span\":SilW, \"x min\": -2e-6,\n",
+    "         \"allow custom eigensolver settings\":1 ,\"display cells\":1, \"number of cell groups\":5,\n",
+    "         \"group spans\": np.transpose([(2e-6, 2*Vp, 2*Vp, 2*Vp, 2e-6)]),\n",
+    "         \"cells\":np.transpose([1, 1, 1, 1, 1]),\n",
+    "         \"subcell method\":np.transpose([1, 1, 1, 1, 1]), # 0 = none,  1 = CVCS\n",
+    "         \"modes\":np.transpose([10, 10, 10, 10, 10])})\n",
+    "\n",
+    "bragg.set({\"start cell group\":3, \"end cell group\":3, \"periods\":VpNum,\n",
+    "           \"wavelength\":1.5e-6,\n",
+    "           \"mesh cells y\": 200, \"mesh cells z\": 200})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Main model test"
    ]
   }
  ],
