Bragg Fiber Grating - Update 7

--- a/Projects/Bragg Grating/SimulationFiles/MODE_Analysis.ipynb
+++ b/Projects/Bragg Grating/SimulationFiles/MODE_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,6 +282,49 @@
     "\n",
     "data = pd.DataFrame(coefs)\n",
     "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.00000000e+00 0.00000000e+00 1.11111111e-07 2.22222222e-07\n",
+      "  3.33333333e-07 4.44444444e-07 5.55555556e-07 6.66666667e-07\n",
+      "  7.77777778e-07 8.88888889e-07 1.00000000e-06 1.00000000e-06]\n",
+      " [2.00000000e-06 3.00000000e-06 3.22222222e-06 3.44444444e-06\n",
+      "  3.66666667e-06 3.88888889e-06 4.11111111e-06 4.33333333e-06\n",
+      "  4.55555556e-06 4.77777778e-06 5.00000000e-06 2.00000000e-06]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def PolyForm(x,y,ybase):\n",
+    "    y2 = y + ybase\n",
+    "    A = np.zeros((2,len(x)+2))\n",
+    "    \n",
+    "    A[0][1:len(x)+1] = x\n",
+    "    A[1][1:len(x)+1] = y2\n",
+    "    A[0][0] = x[0]\n",
+    "    A[0][len(x)+1] = x[-1]\n",
+    "    A[1][0] = ybase\n",
+    "    A[1][len(x)+1] = ybase\n",
+    "    \n",
+    "    return A\n",
+    "\n",
+    "x = np.linspace(0,1e-6,xpts)\n",
+    "y = 2*x + 1e-6\n",
+    "\n",
+    "B = PolyForm(x,y,2e-6)\n",
+    "\n",
+    "bragg.delete(\"2D polygon\")\n",
+    "bragg.add2dpoly()\n",
+    "print(B)\n",
+    "bragg.set(\"vertices\",B)"
    ]
   }
  ],
