Bragg Fiber Grating - Update 8.1

--- a/Projects/Bragg Grating/SimulationFiles/FDTDAssembly.ipynb
+++ b/Projects/Bragg Grating/SimulationFiles/FDTDAssembly.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,23 +25,23 @@
     "###############################################################\n",
     "# LINUX PATH\n",
     "\n",
-    "# sys.path.append(\"/opt/lumerical/v221/api/python\") #Default linux lumapi path\n",
-    "# import lumapi\n",
-    "# sys.path.append(os.path.dirname('/home/trainner/Documentos/Caio/GitReps/Photonics-training/Projects/Bragg Grating/SimulationFiles')) #Current directory\n",
+    "sys.path.append(\"/opt/lumerical/v221/api/python\") #Default linux lumapi path\n",
+    "import lumapi\n",
+    "sys.path.append(os.path.dirname('/home/trainner/Documentos/Caio/GitReps/Photonics-training/Projects/Bragg Grating/SimulationFiles')) #Current directory\n",
     "\n",
     "###############################################################\n",
     "# WINDOWS PATH\n",
     "\n",
-    "spec_win = importlib.util.spec_from_file_location('lumapi', 'C:\\\\Program Files\\\\Lumerical\\\\v202\\\\api\\\\python\\\\lumapi.py')\n",
-    "lumapi = importlib.util.module_from_spec(spec_win)\n",
-    "os.add_dll_directory(\"C:/Program Files/Lumerical/v202/api/python\")\n",
-    "sys.path.append(os.path.dirname('C:/Users/Caio/Documents/GitHub/Photonics-training/Projects/Bragg Grating/SimulationFiles/'))\n",
-    "spec_win.loader.exec_module(lumapi)"
+    "# spec_win = importlib.util.spec_from_file_location('lumapi', 'C:\\\\Program Files\\\\Lumerical\\\\v202\\\\api\\\\python\\\\lumapi.py')\n",
+    "# lumapi = importlib.util.module_from_spec(spec_win)\n",
+    "# os.add_dll_directory(\"C:/Program Files/Lumerical/v202/api/python\")\n",
+    "# sys.path.append(os.path.dirname('C:/Users/Caio/Documents/GitHub/Photonics-training/Projects/Bragg Grating/SimulationFiles/'))\n",
+    "# spec_win.loader.exec_module(lumapi)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "1.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,16 +234,16 @@
     "# FDTD setting\n",
     "bragg.addfdtd()\n",
     "\n",
-    "bragg.set({\"x\":VpNum*Vp/2, \"x span\":VpNum*Vp+1e-6, \"y\":0, \"y span\":(SilH+2*Vh)*2, \"z\":0, \"z span\":1.5e-6,\n",
-    "           \"mesh accuracy\": 4, \n",
-    "           \"y min bc\":\"Symmetric\", \"y max bc\":\"PML\", \"z min bc\":\"PML\", \"z max bc\":\"PML\"})\n",
+    "bragg.set({\"x\":VpNum*Vp/2, \"x span\":VpNum*Vp+1e-6, \"y\":0, \"y span\":(SilH+2*Vh)*2.5, \"z\":0, \"z span\":1.5e-6,\n",
+    "           \"mesh accuracy\": 5, \n",
+    "           \"y min bc\":\"Anti-Symmetric\", \"y max bc\":\"PML\", \"z min bc\":\"PML\", \"z max bc\":\"PML\"})\n",
     "\n",
     "\n",
     "# Mesh insert\n",
     "bragg.addmesh()\n",
-    "bragg.set({\"x\":VpNum*Vp/2, \"x span\":VpNum*Vp+1e-6, \"y\":0, \"y span\":SilH+4*Vh, \"z\":0, \"z span\":1.5*SilW})\n",
+    "bragg.set({\"x\":VpNum*Vp/2, \"x span\":VpNum*Vp+1e-6, \"y\":0, \"y span\":SilH+Vh, \"z\":0, \"z span\":1.5*SilW})\n",
     "bragg.set(\"set maximum mesh step\",1)\n",
-    "bragg.set({\"dx\":5e-9,\"dy\":5e-9,\"dz\":5e-9})\n",
+    "bragg.set({\"dx\":8e-9,\"dy\":8e-9,\"dz\":8e-9})\n",
     "\n",
     "# Ports setting\n",
     "bragg.addport()\n",
@@ -255,7 +255,7 @@
     "           \"direction\":\"Backward\"})\n",
     "\n",
     "bragg.select('FDTD::ports')\n",
-    "bragg.set('monitor frequency points',11)\n",
+    "bragg.set('monitor frequency points',300)\n",
     "\n",
     "bragg.setglobalsource(\"wavelength start\", lmbd-50e-9)\n",
     "bragg.setglobalsource(\"wavelength stop\", lmbd+50e-9)\n",
@@ -266,7 +266,16 @@
     "bragg.setglobalmonitor(\"use source limits\",0)\n",
     "bragg.setglobalmonitor(\"minimum wavelength\",lmbd-50e-9)\n",
     "bragg.setglobalmonitor(\"maximum wavelength\",lmbd+50e-9)\n",
-    "bragg.setglobalmonitor(\"frequency points\",11)"
+    "bragg.setglobalmonitor(\"frequency points\",300)\n",
+    "\n",
+    "# Reflection Monitor insert\n",
+    "bragg.addpower()\n",
+    "bragg.set({\"name\":\"Reflection monitor\", \"monitor type\":\"2D X-normal\",\n",
+    "           \"x\":-0.35e-6, \"y\":0, \"y span\":(SilH+2*Vh)*2, \"z\":0, \"z span\":(SilH+2*Vh)*2})\n",
+    "bragg.setglobalmonitor(\"use source limits\",0)\n",
+    "bragg.setglobalmonitor(\"minimum wavelength\",lmbd-50e-9)\n",
+    "bragg.setglobalmonitor(\"maximum wavelength\",lmbd+50e-9)\n",
+    "bragg.setglobalmonitor(\"frequency points\",300)"
    ]
   },
   {
@@ -288,7 +297,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.2 64-bit",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -302,12 +311,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9cbdc75d9e2f55d2d9002e3a3bcb34fdd032c5e2f75dfba8f134282fc3e89518"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
