--- a/Projects/Bragg Grating/SimulationFiles/GratingAssembly.ipynb
+++ b/Projects/Bragg Grating/SimulationFiles/GratingAssembly.ipynb
@@ -25,18 +25,18 @@
     "###############################################################\n",
     "# LINUX PATH\n",
     "\n",
-    "# sys.path.append(\"/opt/lumerical/v221/api/python\") #Default linux lumapi path\n",
-    "# import lumapi\n",
-    "# sys.path.append(os.path.dirname('/home/trainner/Documentos/Caio/GitReps/Photonics-training/Projects/Bragg Grating/SimulationFiles')) #Current directory\n",
+    "sys.path.append(\"/opt/lumerical/v221/api/python\") #Default linux lumapi path\n",
+    "import lumapi\n",
+    "sys.path.append(os.path.dirname('/home/trainner/Documentos/Caio/GitReps/Photonics-training/Projects/Bragg Grating/SimulationFiles')) #Current directory\n",
     "\n",
     "###############################################################\n",
     "# WINDOWS PATH\n",
     "\n",
-    "spec_win = importlib.util.spec_from_file_location('lumapi', 'C:\\\\Program Files\\\\Lumerical\\\\v202\\\\api\\\\python\\\\lumapi.py')\n",
-    "lumapi = importlib.util.module_from_spec(spec_win)\n",
-    "os.add_dll_directory(\"C:/Program Files/Lumerical/v202/api/python\")\n",
-    "sys.path.append(os.path.dirname('C:/Users/Caio/Documents/GitHub/Photonics-training/Projects/Bragg Grating/SimulationFiles/'))\n",
-    "spec_win.loader.exec_module(lumapi)"
+    "# spec_win = importlib.util.spec_from_file_location('lumapi', 'C:\\\\Program Files\\\\Lumerical\\\\v202\\\\api\\\\python\\\\lumapi.py')\n",
+    "# lumapi = importlib.util.module_from_spec(spec_win)\n",
+    "# os.add_dll_directory(\"C:/Program Files/Lumerical/v202/api/python\")\n",
+    "# sys.path.append(os.path.dirname('C:/Users/Caio/Documents/GitHub/Photonics-training/Projects/Bragg Grating/SimulationFiles/'))\n",
+    "# spec_win.loader.exec_module(lumapi)"
    ]
   },
   {
