Bragg Fiber Grating - Update 8.3

--- a/Projects/Bragg Grating/SimulationFiles/FDTDAssembly.ipynb
+++ b/Projects/Bragg Grating/SimulationFiles/FDTDAssembly.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_28925/2764799992.py:13: DeprecationWarning: the imp module is deprecated in favour of importlib and slated for removal in Python 3.12; see the module's documentation for alternative uses\n",
+      "/tmp/ipykernel_3362/2764799992.py:13: DeprecationWarning: the imp module is deprecated in favour of importlib and slated for removal in Python 3.12; see the module's documentation for alternative uses\n",
       "  import imp\n"
      ]
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "1.0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
     "bragg.addfdtd()\n",
     "\n",
     "bragg.set({\"x\":VpNum*Vp/2, \"x span\":VpNum*Vp+1e-6, \"y\":0, \"y span\":(SilH+2*Vh)*2.5, \"z\":0, \"z span\":1.5e-6,\n",
-    "           \"mesh accuracy\": 5, \n",
+    "           \"mesh accuracy\":7, \"simulation time\":15000e-15,\n",
     "           \"y min bc\":\"Anti-Symmetric\", \"y max bc\":\"PML\", \"z min bc\":\"PML\", \"z max bc\":\"PML\"})\n",
     "\n",
     "\n",
