--- a/Projects/Bragg Grating/SimulationFiles/FDTDAssembly.ipynb
+++ b/Projects/Bragg Grating/SimulationFiles/FDTDAssembly.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_3362/2764799992.py:13: DeprecationWarning: the imp module is deprecated in favour of importlib and slated for removal in Python 3.12; see the module's documentation for alternative uses\n",
-      "  import imp\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -34,18 +25,18 @@
     "###############################################################\n",
     "# LINUX PATH\n",
     "\n",
-    "sys.path.append(\"/opt/lumerical/v221/api/python\") #Default linux lumapi path\n",
-    "import lumapi\n",
-    "sys.path.append(os.path.dirname('/home/trainner/Documentos/Caio/GitReps/Photonics-training/Projects/Bragg Grating/SimulationFiles')) #Current directory\n",
+    "# sys.path.append(\"/opt/lumerical/v221/api/python\") #Default linux lumapi path\n",
+    "# import lumapi\n",
+    "# sys.path.append(os.path.dirname('/home/trainner/Documentos/Caio/GitReps/Photonics-training/Projects/Bragg Grating/SimulationFiles')) #Current directory\n",
     "\n",
     "###############################################################\n",
     "# WINDOWS PATH\n",
     "\n",
-    "# spec_win = importlib.util.spec_from_file_location('lumapi', 'C:\\\\Program Files\\\\Lumerical\\\\v202\\\\api\\\\python\\\\lumapi.py')\n",
-    "# lumapi = importlib.util.module_from_spec(spec_win)\n",
-    "# os.add_dll_directory(\"C:/Program Files/Lumerical/v202/api/python\")\n",
-    "# sys.path.append(os.path.dirname('C:/Users/Caio/Documents/GitHub/Photonics-training/Projects/Bragg Grating/SimulationFiles/'))\n",
-    "# spec_win.loader.exec_module(lumapi)"
+    "spec_win = importlib.util.spec_from_file_location('lumapi', 'C:\\\\Program Files\\\\Lumerical\\\\v202\\\\api\\\\python\\\\lumapi.py')\n",
+    "lumapi = importlib.util.module_from_spec(spec_win)\n",
+    "os.add_dll_directory(\"C:/Program Files/Lumerical/v202/api/python\")\n",
+    "sys.path.append(os.path.dirname('C:/Users/Caio/Documents/GitHub/Photonics-training/Projects/Bragg Grating/SimulationFiles/'))\n",
+    "spec_win.loader.exec_module(lumapi)"
    ]
   },
   {
@@ -201,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +201,7 @@
        "1.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,11 +243,11 @@
     "bragg.addmesh()\n",
     "bragg.set({\"x\":VpNum*Vp/2, \"x span\":VpNum*Vp+1e-6, \"y\":0, \"y span\":SilH+Vh, \"z\":0, \"z span\":1.5*SilW})\n",
     "bragg.set(\"set maximum mesh step\",1)\n",
-    "bragg.set({\"dx\":8e-9,\"dy\":8e-9,\"dz\":8e-9})\n",
+    "bragg.set({\"dx\":0.05e-6,\"dy\":0.005e-6,\"dz\":0.05e-6})\n",
     "\n",
     "# Ports setting\n",
     "bragg.addport()\n",
-    "bragg.set({\"x\":-0.25e-6,\n",
+    "bragg.set({\"x\":-0.25e-6, \"y span\":(SilH+2*Vh)*5, \"z span\":3e-6,\n",
     "           \"direction\":\"Forward\"})\n",
     "\n",
     "bragg.addport()\n",
@@ -264,7 +255,7 @@
     "           \"direction\":\"Backward\"})\n",
     "\n",
     "bragg.select('FDTD::ports')\n",
-    "bragg.set('monitor frequency points',300)\n",
+    "bragg.set('monitor frequency points',1000)\n",
     "\n",
     "bragg.setglobalsource(\"wavelength start\", lmbd-50e-9)\n",
     "bragg.setglobalsource(\"wavelength stop\", lmbd+50e-9)\n",
@@ -275,7 +266,7 @@
     "bragg.setglobalmonitor(\"use source limits\",0)\n",
     "bragg.setglobalmonitor(\"minimum wavelength\",lmbd-50e-9)\n",
     "bragg.setglobalmonitor(\"maximum wavelength\",lmbd+50e-9)\n",
-    "bragg.setglobalmonitor(\"frequency points\",300)\n",
+    "bragg.setglobalmonitor(\"frequency points\",1000)\n",
     "\n",
     "# Reflection Monitor insert\n",
     "bragg.addpower()\n",
@@ -306,7 +297,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3.10.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -320,12 +311,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "9cbdc75d9e2f55d2d9002e3a3bcb34fdd032c5e2f75dfba8f134282fc3e89518"
    }
   }
  },
