--- a/Projects/MMI/SimulationFiles/CodeMMI.ipynb
+++ b/Projects/MMI/SimulationFiles/CodeMMI.ipynb
@@ -153,7 +153,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.2 ('teee')",
+   "display_name": "Python 3.10.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -172,7 +172,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "0f7288f5bbc8ddabadb55512c6ea40631ee26a15da14324bc6de909c1bf76211"
+    "hash": "9cbdc75d9e2f55d2d9002e3a3bcb34fdd032c5e2f75dfba8f134282fc3e89518"
    }
   }
  },
